# 4kupscaler

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  handoff.md  project_summary.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.toml  wslconfig
scripts/: cloud-upscale.sh  debug_download.py  deploy-wsl2.sh
src/upscaler/: __init__.py  __main__.py
src/upscaler/_vendor/seedvr2/: README.md
src/upscaler/cli/: app.py  batch.py  cloud.py  common.py  config_cmd.py  preview.py  upscale.py
src/upscaler/cloud/: fleet.py  job.py  preemption.py  transfer.py  vast.py
src/upscaler/config/: __init__.py  defaults.py  loader.py  schema.py
src/upscaler/core/: __init__.py  checkpoint.py  engine.py  models.py  presets.py  video_io.py
src/upscaler/diagnostics/: gpu_monitor.py  thermal.py
src/upscaler/progress/: reporter.py
tests/: conftest.py  test_checkpoint.py  test_checkpoint_workers.py  test_cli.py  test_cloud_transfer.py  test_cloud_vast.py  test_config.py  test_engine.py  test_fleet.py  test_gpu_monitor.py  test_loader.py  test_models.py  test_preemption.py  test_presets.py  test_thermal.py  test_video_io.py
