[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "4kupscaler"
version = "0.1.0"
description = "4K video upscaler powered by SeedVR2"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.4",
    "torchvision",
    "einops",
    "omegaconf",
    "opencv-python",
    "huggingface-hub",
    "safetensors",
    "mediapy",
    "psutil",
    "pynvml>=11.5",
    "diffusers",
    "tqdm",
    "rotary-embedding-torch",
    "numpy",
    "Pillow",
]
cloud = [
    "vastai>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
upscaler = "upscaler.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/upscaler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires CUDA GPU (deselect with '-m \"not gpu\"')",
]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 88
exclude = ["src/upscaler/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["upscaler"]
omit = ["src/upscaler/_vendor/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true
